avcodec/bmp_parser: delay frame end detection to the next header or EOF

Fixes Ticket3687

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>